--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "crispii_music"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2024"
 rust-version = "1.85.0"
 description = "Music types intended for use in Crispii"
@@ -11,4 +11,5 @@ license = "MIT OR Apache-2.0"
 keywords = ["crispii", "music"]
 
 [dependencies]
+rand = "0.9.2"
 crispii_errors = "0.1.2"
